--- a/site.css
+++ b/site.css
@@ -1,5 +1,12 @@
 body {
 	margin: 20px;
+  font: 16px Helvetica, Sans-Serif; 
+  line-height: 24px; 
+  background-image: url(); 
+  background-color: #cccccc;
+  background-repeat: repeat-y;
+  background-size: 100%;
+  background-position: center;
 }
 
 .card {
