--- a/site.css
+++ b/site.css
@@ -2,7 +2,7 @@ body {
   margin: 25px;
   font: 24px Helvetica, Sans-Serif; 
   line-height: 24px; 
-  background-image: url(); 
+  background-image: url(http://il3.picdn.net/shutterstock/videos/2150831/thumb/2.jpg?i10c=img.resize(height:160)); 
   background-color: white;
   background-repeat: repeat-x;
   background-size: 100%;
