--- a/site.css
+++ b/site.css
@@ -2,12 +2,12 @@ body {
   margin: 25px;
   font: 24px Helvetica, Sans-Serif; 
   line-height: 24px; 
-  background-image: url(http://il3.picdn.net/shutterstock/videos/2150831/thumb/2.jpg?i10c=img.resize(height:160)); 
+  background-image: url(http://il3.picdn.net/shutterstock/videos/2150831/thumb/2.jpg?i10c=img.resize(height:160); 
   background-color: white;
   background-repeat: repeat-x;
   background-size: 100%;
   background-position: center;
-  text-color: black;
+  color: black;
 }
 
 .card {
@@ -19,7 +19,7 @@ body {
 div {
   margin: auto;
   text-color: black;
-
+}
 .hold {
   border: 2px solid lawngreen;
   border-width: 5px;
