--- a/site.css
+++ b/site.css
@@ -1,7 +1,7 @@
 body {
   font: 24px Helvetica, Sans-Serif; 
   line-height: 24px; 
-  background-image: url('http://il3.picdn.net/shutterstock/videos/2150831/thumb/2.jpg?i10c=img.resize(height:160'); 
+  background-image: url(''); 
   background-color: white;
   background-repeat: repeat-x;
   background-size: 100%;
@@ -17,7 +17,7 @@ body {
 
 div {
   margin: auto;
-  text-color: black;
+  color: black;
 }
 .hold {
   border: 2px solid lawngreen;
