--- a/site.css
+++ b/site.css
@@ -1,7 +1,7 @@
 body {
   font: 24px Helvetica, Sans-Serif; 
   line-height: 24px; 
-  background-image: url(''); 
+  background-image: url('http://www.edgewatercasino.ca/images/page-bgs/stack-of-chips.jpg'); 
   background-color: white;
   background-repeat: repeat-x;
   background-size: 100%;
@@ -12,7 +12,7 @@ body {
 .card {
   display: inline-block;
   margin: 3px;
-  width: 80px;
+  width: 90px;
 }
 
 div {
@@ -21,4 +21,19 @@ div {
 .hold {
   border: 2px solid lawngreen;
   border-width: 5px;
+}
+td {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: gray;
+  color: white;
+  border: 1px solid black;
+}
+table {
+    width: 100%;
+}
+th {
+  background-color: gray;
+  height: 50px;
 }
